# aiogram-admin

./: pyproject.toml
aiogram_admin/: __init__.py  config.py
aiogram_admin/callback_data/: base_callback.py
aiogram_admin/filters/: admin.py  channel_subscription_filter.py
aiogram_admin/handlers/admin/: __init__.py  admin_menu.py  bot_settings.py  chat_menu.py  send_mail.py  statistics_menu.py
aiogram_admin/handlers/common/: common_menu.py
aiogram_admin/handlers/errors/: errors_handlers.py
aiogram_admin/markups/admin/: admin_markups.py  bot_settings_markups.py  channel_markups.py
aiogram_admin/markups/common/: common_markups.py
aiogram_admin/middleware/: language.py
aiogram_admin/models/: __init__.py  chat.py  patched.py  user.py
aiogram_admin/scripts/: terminate_process.py
aiogram_admin/utils/: __init__.py  bot.py  chat.py  export.py  send_mail.py
tests/: test_main.py
