[tool.poetry]
name = "aiogram-admin"
version = "0.1.0"
description = ""
authors = ["taimast <81189712+taimast@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aiogram_admin"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {version = "^3.0.0b5", allow-prereleases = true}
loguru = "^0.6.0"
Babel = "^2.10.3"
psutil = "^5.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
autopep8 = "^1.7.0"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
